src/config/snapshots/handlr__config__main_config__tests__print_handlers_detailed.snap
---
source: src/config/main_config.rs
expression: "String::from_utf8(buffer)?"
---
Default Apps
┌─────────────────────────────────────────────────┬─────────────────────┐
│[37m [39m[37mmime[39m[37m                                           [39m[37m [39m│[37m [39m[37mhandlers[39m[37m           [39m[37m [39m│
├─────────────────────────────────────────────────┼─────────────────────┤
│[40m [49m[40mapplication/vnd.oasis.opendocument.*[49m[40m           [49m[40m [49m│[40m [49m[40mstartcenter.desktop[49m[40m [49m│
│[37m [39m[37mapplication/vnd.openxmlformats-officedocument.*[39m[37m [39m│[37m [39m[37mstartcenter.desktop[39m[37m [39m│
│[40m [49m[40mtext/plain[49m[40m                                     [49m[40m [49m│[40m [49m[40mhelix.desktop,[49m[40m    [49m[40m [49m[40m [49m│
│[40m                                                 [49m│[40m [49m[40mnvim.desktop,[49m[40m    [49m[40m  [49m[40m [49m│
│[40m                                                 [49m│[40m [49m[40mkakoune.desktop[49m[40m    [49m[40m [49m│
│[37m [39m[37mvideo/asdf[39m[37m                                     [39m[37m [39m│[37m [39m[37mmpv.desktop[39m[37m        [39m[37m [39m│
│[40m [49m[40mvideo/mp4[49m[40m                                      [49m[40m [49m│[40m [49m[40mmpv.desktop[49m[40m        [49m[40m [49m│
│[37m [39m[37mvideo/webm[39m[37m                                     [39m[37m [39m│[37m [39m[37mbrave.desktop[39m[37m      [39m[37m [39m│
└─────────────────────────────────────────────────┴─────────────────────┘
Added associations
┌───────────────────────────┬────────────────────────────────┐
│[37m [39m[37mmime[39m[37m                     [39m[37m [39m│[37m [39m[37mhandlers[39m[37m                      [39m[37m [39m│
├───────────────────────────┼────────────────────────────────┤
│[40m [49m[40mx-scheme-handler/terminal[49m[40m [49m│[40m [49m[40morg.wezfurlong.wezterm.desktop[49m[40m [49m│
└───────────────────────────┴────────────────────────────────┘
System Apps
┌──────┬──────────┐
│[37m [39m[37mmime[39m[37m [39m│[37m [39m[37mhandlers[39m[37m [39m│
├──────┼──────────┤
